--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_mobx: ^2.2.1+1
   flutter_modular: ^6.3.3
   hive: ^2.2.3
+  path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
@@ -25,5 +26,14 @@ dev_dependencies:
   mobx_codegen: ^2.6.1
 
 flutter:
-  generate: true
   uses-material-design: true
+
+  fonts:
+    - family: OpenSans
+      fonts:
+        - asset: assets/fonts/OpenSans-Light.ttf
+        - asset: assets/fonts/OpenSans-Regular.ttf
+        - asset: assets/fonts/OpenSans-Medium.ttf
+        - asset: assets/fonts/OpenSans-SemiBold.ttf
+        - asset: assets/fonts/OpenSans-Bold.ttf
+        - asset: assets/fonts/OpenSans-ExtraBold.ttf
