--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,10 @@ dependencies:
   flutter_modular: ^6.3.3
   hive: ^2.2.3
   path_provider: ^2.1.3
+  dio: ^5.3.0
+  result_dart: ^1.1.1
+  http: ^1.1.0
+  socket_io_client: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +31,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/articles/
 
   fonts:
     - family: OpenSans
