--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   result_dart: ^1.1.1
   http: ^1.1.0
   socket_io_client: ^3.0.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
